<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/final_textlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="64dp"
        android:text="@string/result_finish_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_textlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="62dp"
        android:text="@string/result_score_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_textlabel"
        tools:text="@string/result_score_label" />

    <TextView
        android:id="@+id/percentage_textlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="62dp"
        android:text="@string/result_percentage_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_textlabel" />

    <Button
        android:id="@+id/tryagain_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:text="@string/result_tryagain_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentage_textlabel" />
</androidx.constraintlayout.widget.ConstraintLayout>