<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    tools:context=".QuizzActivity">

    <TextView
        android:id="@+id/quizzTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="62dp"
        android:contentDescription="@string/default_quizztext"
        android:text="@string/default_quizztext"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="62dp"
        android:tag="0"
        android:text="@string/default_answer1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzTitle" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="72dp"
        android:tag="1"
        android:text="@string/default_answer2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/answer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="190dp"
        android:tag="2"
        android:text="@string/default_answer3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>